--- a/Fetch Data.ipynb
+++ b/Fetch Data.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "bb50b511",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openbb as bb\n",
+    "from openbb import obb\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.stats import norm"
@@ -15,21 +15,304 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "87da49a0",
+   "execution_count": 9,
+   "id": "065680a2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, welcome to the stock market analysis tool!\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FedFunds</th>\n",
+       "      <th>SOFR</th>\n",
+       "      <th>1Mo</th>\n",
+       "      <th>3Mo</th>\n",
+       "      <th>6Mo</th>\n",
+       "      <th>1Yr</th>\n",
+       "      <th>2Yr</th>\n",
+       "      <th>3Yr</th>\n",
+       "      <th>5Yr</th>\n",
+       "      <th>7Yr</th>\n",
+       "      <th>10Yr</th>\n",
+       "      <th>30Yr</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-02</th>\n",
+       "      <td>0.0155</td>\n",
+       "      <td>0.0154</td>\n",
+       "      <td>0.0153</td>\n",
+       "      <td>0.0154</td>\n",
+       "      <td>0.0157</td>\n",
+       "      <td>0.0156</td>\n",
+       "      <td>0.0158</td>\n",
+       "      <td>0.0159</td>\n",
+       "      <td>0.0167</td>\n",
+       "      <td>0.0179</td>\n",
+       "      <td>0.0188</td>\n",
+       "      <td>0.0233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-03</th>\n",
+       "      <td>0.0155</td>\n",
+       "      <td>0.0155</td>\n",
+       "      <td>0.0152</td>\n",
+       "      <td>0.0152</td>\n",
+       "      <td>0.0155</td>\n",
+       "      <td>0.0155</td>\n",
+       "      <td>0.0153</td>\n",
+       "      <td>0.0154</td>\n",
+       "      <td>0.0159</td>\n",
+       "      <td>0.0171</td>\n",
+       "      <td>0.0180</td>\n",
+       "      <td>0.0226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-06</th>\n",
+       "      <td>0.0155</td>\n",
+       "      <td>0.0155</td>\n",
+       "      <td>0.0154</td>\n",
+       "      <td>0.0156</td>\n",
+       "      <td>0.0156</td>\n",
+       "      <td>0.0154</td>\n",
+       "      <td>0.0154</td>\n",
+       "      <td>0.0156</td>\n",
+       "      <td>0.0161</td>\n",
+       "      <td>0.0172</td>\n",
+       "      <td>0.0181</td>\n",
+       "      <td>0.0228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-07</th>\n",
+       "      <td>0.0155</td>\n",
+       "      <td>0.0156</td>\n",
+       "      <td>0.0152</td>\n",
+       "      <td>0.0154</td>\n",
+       "      <td>0.0156</td>\n",
+       "      <td>0.0153</td>\n",
+       "      <td>0.0154</td>\n",
+       "      <td>0.0155</td>\n",
+       "      <td>0.0162</td>\n",
+       "      <td>0.0174</td>\n",
+       "      <td>0.0183</td>\n",
+       "      <td>0.0231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-08</th>\n",
+       "      <td>0.0155</td>\n",
+       "      <td>0.0155</td>\n",
+       "      <td>0.0150</td>\n",
+       "      <td>0.0154</td>\n",
+       "      <td>0.0156</td>\n",
+       "      <td>0.0155</td>\n",
+       "      <td>0.0158</td>\n",
+       "      <td>0.0161</td>\n",
+       "      <td>0.0167</td>\n",
+       "      <td>0.0178</td>\n",
+       "      <td>0.0187</td>\n",
+       "      <td>0.0235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-16</th>\n",
+       "      <td>0.0364</td>\n",
+       "      <td>0.0369</td>\n",
+       "      <td>0.0376</td>\n",
+       "      <td>0.0364</td>\n",
+       "      <td>0.0360</td>\n",
+       "      <td>0.0351</td>\n",
+       "      <td>0.0348</td>\n",
+       "      <td>0.0352</td>\n",
+       "      <td>0.0369</td>\n",
+       "      <td>0.0390</td>\n",
+       "      <td>0.0415</td>\n",
+       "      <td>0.0482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-17</th>\n",
+       "      <td>0.0364</td>\n",
+       "      <td>0.0369</td>\n",
+       "      <td>0.0373</td>\n",
+       "      <td>0.0364</td>\n",
+       "      <td>0.0359</td>\n",
+       "      <td>0.0351</td>\n",
+       "      <td>0.0349</td>\n",
+       "      <td>0.0353</td>\n",
+       "      <td>0.0370</td>\n",
+       "      <td>0.0391</td>\n",
+       "      <td>0.0416</td>\n",
+       "      <td>0.0483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-18</th>\n",
+       "      <td>0.0364</td>\n",
+       "      <td>0.0366</td>\n",
+       "      <td>0.0371</td>\n",
+       "      <td>0.0362</td>\n",
+       "      <td>0.0358</td>\n",
+       "      <td>0.0349</td>\n",
+       "      <td>0.0346</td>\n",
+       "      <td>0.0350</td>\n",
+       "      <td>0.0366</td>\n",
+       "      <td>0.0387</td>\n",
+       "      <td>0.0412</td>\n",
+       "      <td>0.0480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-19</th>\n",
+       "      <td>0.0364</td>\n",
+       "      <td>0.0366</td>\n",
+       "      <td>0.0371</td>\n",
+       "      <td>0.0362</td>\n",
+       "      <td>0.0360</td>\n",
+       "      <td>0.0351</td>\n",
+       "      <td>0.0348</td>\n",
+       "      <td>0.0353</td>\n",
+       "      <td>0.0370</td>\n",
+       "      <td>0.0391</td>\n",
+       "      <td>0.0416</td>\n",
+       "      <td>0.0482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-22</th>\n",
+       "      <td>0.0364</td>\n",
+       "      <td>0.0368</td>\n",
+       "      <td>0.0372</td>\n",
+       "      <td>0.0364</td>\n",
+       "      <td>0.0360</td>\n",
+       "      <td>0.0353</td>\n",
+       "      <td>0.0344</td>\n",
+       "      <td>0.0356</td>\n",
+       "      <td>0.0371</td>\n",
+       "      <td>0.0393</td>\n",
+       "      <td>0.0417</td>\n",
+       "      <td>0.0484</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1500 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            FedFunds    SOFR     1Mo     3Mo     6Mo     1Yr     2Yr     3Yr  \\\n",
+       "date                                                                           \n",
+       "2020-01-02    0.0155  0.0154  0.0153  0.0154  0.0157  0.0156  0.0158  0.0159   \n",
+       "2020-01-03    0.0155  0.0155  0.0152  0.0152  0.0155  0.0155  0.0153  0.0154   \n",
+       "2020-01-06    0.0155  0.0155  0.0154  0.0156  0.0156  0.0154  0.0154  0.0156   \n",
+       "2020-01-07    0.0155  0.0156  0.0152  0.0154  0.0156  0.0153  0.0154  0.0155   \n",
+       "2020-01-08    0.0155  0.0155  0.0150  0.0154  0.0156  0.0155  0.0158  0.0161   \n",
+       "...              ...     ...     ...     ...     ...     ...     ...     ...   \n",
+       "2025-12-16    0.0364  0.0369  0.0376  0.0364  0.0360  0.0351  0.0348  0.0352   \n",
+       "2025-12-17    0.0364  0.0369  0.0373  0.0364  0.0359  0.0351  0.0349  0.0353   \n",
+       "2025-12-18    0.0364  0.0366  0.0371  0.0362  0.0358  0.0349  0.0346  0.0350   \n",
+       "2025-12-19    0.0364  0.0366  0.0371  0.0362  0.0360  0.0351  0.0348  0.0353   \n",
+       "2025-12-22    0.0364  0.0368  0.0372  0.0364  0.0360  0.0353  0.0344  0.0356   \n",
+       "\n",
+       "               5Yr     7Yr    10Yr    30Yr  \n",
+       "date                                        \n",
+       "2020-01-02  0.0167  0.0179  0.0188  0.0233  \n",
+       "2020-01-03  0.0159  0.0171  0.0180  0.0226  \n",
+       "2020-01-06  0.0161  0.0172  0.0181  0.0228  \n",
+       "2020-01-07  0.0162  0.0174  0.0183  0.0231  \n",
+       "2020-01-08  0.0167  0.0178  0.0187  0.0235  \n",
+       "...            ...     ...     ...     ...  \n",
+       "2025-12-16  0.0369  0.0390  0.0415  0.0482  \n",
+       "2025-12-17  0.0370  0.0391  0.0416  0.0483  \n",
+       "2025-12-18  0.0366  0.0387  0.0412  0.0480  \n",
+       "2025-12-19  0.0370  0.0391  0.0416  0.0482  \n",
+       "2025-12-22  0.0371  0.0393  0.0417  0.0484  \n",
+       "\n",
+       "[1500 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Hello, welcome to the stock market analysis tool!\")\n"
+    "\n",
+    "treasury_data = obb.fixedincome.government.treasury_rates(start_date=\"2020-01-02\",provider=\"federal_reserve\").to_df()\n",
+    "fed_funds = obb.fixedincome.rate.effr(start_date=\"2020-01-02\",provider=\"federal_reserve\").to_df()[['rate']].rename(columns={'rate': 'FedFunds'})\n",
+    "sofr_data = obb.fixedincome.rate.sofr(start_date=\"2020-01-02\",provider=\"federal_reserve\").to_df()[['rate']].rename(columns={'rate': 'SOFR'})\n",
+    "\n",
+    "# Merge DataFrames\n",
+    "rates_data = treasury_data.join([fed_funds, sofr_data], how='outer')\n",
+    "\n",
+    "rates_data.rename(columns={\n",
+    "    \"month_1\": \"1Mo\",\n",
+    "    \"month_3\": \"3Mo\",\n",
+    "    \"month_6\": \"6Mo\", \n",
+    "    \"year_1\": \"1Yr\",\n",
+    "    \"year_2\": \"2Yr\",\n",
+    "    \"year_3\": \"3Yr\", \n",
+    "    \"year_5\": \"5Yr\",\n",
+    "    \"year_7\": \"7Yr\", \n",
+    "    \"year_10\": \"10Yr\", \n",
+    "    \"year_30\": \"30Yr\",\n",
+    "    \"rate_x\": \"FedFunds\", \n",
+    "    \"rate_y\": \"SOFR\"     \n",
+    "}, inplace=True)\n",
+    "\n",
+    "rates_data=rates_data.sort_index()\n",
+    "rates_data=rates_data[['FedFunds','SOFR','1Mo','3Mo','6Mo','1Yr','2Yr','3Yr','5Yr','7Yr','10Yr','30Yr']]\n",
+    "rates_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9025f6fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
