--- a/Fetch Data.ipynb
+++ b/Fetch Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 79,
    "id": "bb50b511",
    "metadata": {},
    "outputs": [],
@@ -10,13 +10,63 @@
     "from openbb import obb\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy.stats import norm"
+    "from scipy.stats import norm\n",
+    "import datetime as dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
    "id": "065680a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def FetchRates(Start_Date=None, End_Date=None):\n",
+    "    treasury_data = obb.fixedincome.government.treasury_rates(start_date=Start_Date, end_date=End_Date, provider=\"federal_reserve\").to_df()\n",
+    "    fed_funds = obb.fixedincome.rate.effr(start_date=Start_Date, end_date=End_Date, provider=\"federal_reserve\").to_df()[['rate']].rename(columns={'rate': 'FedFunds'})\n",
+    "    sofr_data = obb.fixedincome.rate.sofr(start_date=Start_Date, end_date=End_Date, provider=\"federal_reserve\").to_df()[['rate']].rename(columns={'rate': 'SOFR'})\n",
+    "\n",
+    "    #Merge\n",
+    "    rates_data = treasury_data.join([fed_funds, sofr_data], how='outer')\n",
+    "    #Reset Index\n",
+    "    rates_data = rates_data.rename_axis('Date').reset_index()\n",
+    "\n",
+    "    #Renaming Columns\n",
+    "    rates_data.rename(columns={\n",
+    "        \"month_1\": \"1Mo\", \"month_2\": \"2Mo\", \"month_3\": \"3Mo\", \"month_6\": \"6Mo\", \n",
+    "        \"year_1\": \"1Yr\", \"year_2\": \"2Yr\", \"year_3\": \"3Yr\", \n",
+    "        \"year_5\": \"5Yr\", \"year_7\": \"7Yr\", \"year_10\": \"10Yr\", \"year_30\": \"30Yr\"\n",
+    "    }, inplace=True)\n",
+    "\n",
+    "    # Filter and Sort\n",
+    "    cols = ['Date', 'FedFunds', 'SOFR', '1Mo', '3Mo', '6Mo', '1Yr', '2Yr', '3Yr', '5Yr', '7Yr', '10Yr', '30Yr']\n",
+    "    rates_data = rates_data[cols].sort_values('Date')\n",
+    "\n",
+    "    # Removing rows where primary benchmarks are missing (weekends/holidays)\n",
+    "    rates_data = rates_data.dropna(subset=['FedFunds', '1Mo'])\n",
+    "    \n",
+    "    # Forward Fill SOFR (Modern syntax)\n",
+    "    rates_data['SOFR'] = rates_data['SOFR'].ffill()\n",
+    "    \n",
+    "    return rates_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9025f6fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter for rows that contain any NaN values\n",
+    "#null_rows = rates_data[rates_data.isnull().any(axis=1)]\n",
+    "#null_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "7b1b5289",
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +90,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Date</th>\n",
        "      <th>FedFunds</th>\n",
        "      <th>SOFR</th>\n",
        "      <th>1Mo</th>\n",
@@ -53,25 +104,11 @@
        "      <th>10Yr</th>\n",
        "      <th>30Yr</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2020-01-02</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-02</td>\n",
        "      <td>0.0155</td>\n",
        "      <td>0.0154</td>\n",
        "      <td>0.0153</td>\n",
@@ -86,7 +123,8 @@
        "      <td>0.0233</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-01-03</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-03</td>\n",
        "      <td>0.0155</td>\n",
        "      <td>0.0155</td>\n",
        "      <td>0.0152</td>\n",
@@ -101,7 +139,8 @@
        "      <td>0.0226</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-01-06</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-06</td>\n",
        "      <td>0.0155</td>\n",
        "      <td>0.0155</td>\n",
        "      <td>0.0154</td>\n",
@@ -116,7 +155,8 @@
        "      <td>0.0228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-01-07</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-07</td>\n",
        "      <td>0.0155</td>\n",
        "      <td>0.0156</td>\n",
        "      <td>0.0152</td>\n",
@@ -131,7 +171,8 @@
        "      <td>0.0231</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-01-08</th>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-08</td>\n",
        "      <td>0.0155</td>\n",
        "      <td>0.0155</td>\n",
        "      <td>0.0150</td>\n",
@@ -159,9 +200,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-12-16</th>\n",
+       "      <th>1489</th>\n",
+       "      <td>2025-12-16</td>\n",
        "      <td>0.0364</td>\n",
        "      <td>0.0369</td>\n",
        "      <td>0.0376</td>\n",
@@ -176,7 +219,8 @@
        "      <td>0.0482</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-12-17</th>\n",
+       "      <th>1490</th>\n",
+       "      <td>2025-12-17</td>\n",
        "      <td>0.0364</td>\n",
        "      <td>0.0369</td>\n",
        "      <td>0.0373</td>\n",
@@ -191,7 +235,8 @@
        "      <td>0.0483</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-12-18</th>\n",
+       "      <th>1491</th>\n",
+       "      <td>2025-12-18</td>\n",
        "      <td>0.0364</td>\n",
        "      <td>0.0366</td>\n",
        "      <td>0.0371</td>\n",
@@ -206,7 +251,8 @@
        "      <td>0.0480</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-12-19</th>\n",
+       "      <th>1492</th>\n",
+       "      <td>2025-12-19</td>\n",
        "      <td>0.0364</td>\n",
        "      <td>0.0366</td>\n",
        "      <td>0.0371</td>\n",
@@ -221,7 +267,8 @@
        "      <td>0.0482</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-12-22</th>\n",
+       "      <th>1493</th>\n",
+       "      <td>2025-12-22</td>\n",
        "      <td>0.0364</td>\n",
        "      <td>0.0368</td>\n",
        "      <td>0.0372</td>\n",
@@ -237,79 +284,52 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1500 rows × 12 columns</p>\n",
+       "<p>1494 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            FedFunds    SOFR     1Mo     3Mo     6Mo     1Yr     2Yr     3Yr  \\\n",
-       "date                                                                           \n",
-       "2020-01-02    0.0155  0.0154  0.0153  0.0154  0.0157  0.0156  0.0158  0.0159   \n",
-       "2020-01-03    0.0155  0.0155  0.0152  0.0152  0.0155  0.0155  0.0153  0.0154   \n",
-       "2020-01-06    0.0155  0.0155  0.0154  0.0156  0.0156  0.0154  0.0154  0.0156   \n",
-       "2020-01-07    0.0155  0.0156  0.0152  0.0154  0.0156  0.0153  0.0154  0.0155   \n",
-       "2020-01-08    0.0155  0.0155  0.0150  0.0154  0.0156  0.0155  0.0158  0.0161   \n",
-       "...              ...     ...     ...     ...     ...     ...     ...     ...   \n",
-       "2025-12-16    0.0364  0.0369  0.0376  0.0364  0.0360  0.0351  0.0348  0.0352   \n",
-       "2025-12-17    0.0364  0.0369  0.0373  0.0364  0.0359  0.0351  0.0349  0.0353   \n",
-       "2025-12-18    0.0364  0.0366  0.0371  0.0362  0.0358  0.0349  0.0346  0.0350   \n",
-       "2025-12-19    0.0364  0.0366  0.0371  0.0362  0.0360  0.0351  0.0348  0.0353   \n",
-       "2025-12-22    0.0364  0.0368  0.0372  0.0364  0.0360  0.0353  0.0344  0.0356   \n",
+       "            Date  FedFunds    SOFR     1Mo     3Mo     6Mo     1Yr     2Yr  \\\n",
+       "0     2020-01-02    0.0155  0.0154  0.0153  0.0154  0.0157  0.0156  0.0158   \n",
+       "1     2020-01-03    0.0155  0.0155  0.0152  0.0152  0.0155  0.0155  0.0153   \n",
+       "2     2020-01-06    0.0155  0.0155  0.0154  0.0156  0.0156  0.0154  0.0154   \n",
+       "3     2020-01-07    0.0155  0.0156  0.0152  0.0154  0.0156  0.0153  0.0154   \n",
+       "4     2020-01-08    0.0155  0.0155  0.0150  0.0154  0.0156  0.0155  0.0158   \n",
+       "...          ...       ...     ...     ...     ...     ...     ...     ...   \n",
+       "1489  2025-12-16    0.0364  0.0369  0.0376  0.0364  0.0360  0.0351  0.0348   \n",
+       "1490  2025-12-17    0.0364  0.0369  0.0373  0.0364  0.0359  0.0351  0.0349   \n",
+       "1491  2025-12-18    0.0364  0.0366  0.0371  0.0362  0.0358  0.0349  0.0346   \n",
+       "1492  2025-12-19    0.0364  0.0366  0.0371  0.0362  0.0360  0.0351  0.0348   \n",
+       "1493  2025-12-22    0.0364  0.0368  0.0372  0.0364  0.0360  0.0353  0.0344   \n",
        "\n",
-       "               5Yr     7Yr    10Yr    30Yr  \n",
-       "date                                        \n",
-       "2020-01-02  0.0167  0.0179  0.0188  0.0233  \n",
-       "2020-01-03  0.0159  0.0171  0.0180  0.0226  \n",
-       "2020-01-06  0.0161  0.0172  0.0181  0.0228  \n",
-       "2020-01-07  0.0162  0.0174  0.0183  0.0231  \n",
-       "2020-01-08  0.0167  0.0178  0.0187  0.0235  \n",
-       "...            ...     ...     ...     ...  \n",
-       "2025-12-16  0.0369  0.0390  0.0415  0.0482  \n",
-       "2025-12-17  0.0370  0.0391  0.0416  0.0483  \n",
-       "2025-12-18  0.0366  0.0387  0.0412  0.0480  \n",
-       "2025-12-19  0.0370  0.0391  0.0416  0.0482  \n",
-       "2025-12-22  0.0371  0.0393  0.0417  0.0484  \n",
+       "         3Yr     5Yr     7Yr    10Yr    30Yr  \n",
+       "0     0.0159  0.0167  0.0179  0.0188  0.0233  \n",
+       "1     0.0154  0.0159  0.0171  0.0180  0.0226  \n",
+       "2     0.0156  0.0161  0.0172  0.0181  0.0228  \n",
+       "3     0.0155  0.0162  0.0174  0.0183  0.0231  \n",
+       "4     0.0161  0.0167  0.0178  0.0187  0.0235  \n",
+       "...      ...     ...     ...     ...     ...  \n",
+       "1489  0.0352  0.0369  0.0390  0.0415  0.0482  \n",
+       "1490  0.0353  0.0370  0.0391  0.0416  0.0483  \n",
+       "1491  0.0350  0.0366  0.0387  0.0412  0.0480  \n",
+       "1492  0.0353  0.0370  0.0391  0.0416  0.0482  \n",
+       "1493  0.0356  0.0371  0.0393  0.0417  0.0484  \n",
        "\n",
-       "[1500 rows x 12 columns]"
+       "[1494 rows x 13 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "treasury_data = obb.fixedincome.government.treasury_rates(start_date=\"2020-01-02\",provider=\"federal_reserve\").to_df()\n",
-    "fed_funds = obb.fixedincome.rate.effr(start_date=\"2020-01-02\",provider=\"federal_reserve\").to_df()[['rate']].rename(columns={'rate': 'FedFunds'})\n",
-    "sofr_data = obb.fixedincome.rate.sofr(start_date=\"2020-01-02\",provider=\"federal_reserve\").to_df()[['rate']].rename(columns={'rate': 'SOFR'})\n",
-    "\n",
-    "# Merge DataFrames\n",
-    "rates_data = treasury_data.join([fed_funds, sofr_data], how='outer')\n",
-    "\n",
-    "rates_data.rename(columns={\n",
-    "    \"month_1\": \"1Mo\",\n",
-    "    \"month_3\": \"3Mo\",\n",
-    "    \"month_6\": \"6Mo\", \n",
-    "    \"year_1\": \"1Yr\",\n",
-    "    \"year_2\": \"2Yr\",\n",
-    "    \"year_3\": \"3Yr\", \n",
-    "    \"year_5\": \"5Yr\",\n",
-    "    \"year_7\": \"7Yr\", \n",
-    "    \"year_10\": \"10Yr\", \n",
-    "    \"year_30\": \"30Yr\",\n",
-    "    \"rate_x\": \"FedFunds\", \n",
-    "    \"rate_y\": \"SOFR\"     \n",
-    "}, inplace=True)\n",
-    "\n",
-    "rates_data=rates_data.sort_index()\n",
-    "rates_data=rates_data[['FedFunds','SOFR','1Mo','3Mo','6Mo','1Yr','2Yr','3Yr','5Yr','7Yr','10Yr','30Yr']]\n",
-    "rates_data"
+    "FetchRates(\"2020-01-02\",\"2025-12-31\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9025f6fb",
+   "id": "b55114e1",
    "metadata": {},
    "outputs": [],
    "source": []
