--- a/Fetch Data.ipynb
+++ b/Fetch Data.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "id": "7b1b5289",
    "metadata": {},
    "outputs": [
@@ -317,13 +317,15 @@
        "[1494 rows x 13 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "FetchRates(\"2020-01-02\",\"2025-12-31\")"
+    "start_date = \"2020-01-02\"\n",
+    "end_date = dt.datetime.today().strftime('%Y-%m-%d') \n",
+    "FetchRates(start_date, end_date)"
    ]
   },
   {
