--- a/Fetch Data.ipynb
+++ b/Fetch Data.ipynb
@@ -65,8 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 93,
    "id": "7b1b5289",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_date = \"2020-01-02\"\n",
+    "end_date = dt.datetime.today().strftime('%Y-%m-%d')\n",
+    "\n",
+    "rates_data=FetchRates(start_date, end_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b55114e1",
    "metadata": {},
    "outputs": [
     {
@@ -106,232 +119,31 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>0.0155</td>\n",
-       "      <td>0.0154</td>\n",
-       "      <td>0.0153</td>\n",
-       "      <td>0.0154</td>\n",
-       "      <td>0.0157</td>\n",
-       "      <td>0.0156</td>\n",
-       "      <td>0.0158</td>\n",
-       "      <td>0.0159</td>\n",
-       "      <td>0.0167</td>\n",
-       "      <td>0.0179</td>\n",
-       "      <td>0.0188</td>\n",
-       "      <td>0.0233</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-03</td>\n",
-       "      <td>0.0155</td>\n",
-       "      <td>0.0155</td>\n",
-       "      <td>0.0152</td>\n",
-       "      <td>0.0152</td>\n",
-       "      <td>0.0155</td>\n",
-       "      <td>0.0155</td>\n",
-       "      <td>0.0153</td>\n",
-       "      <td>0.0154</td>\n",
-       "      <td>0.0159</td>\n",
-       "      <td>0.0171</td>\n",
-       "      <td>0.0180</td>\n",
-       "      <td>0.0226</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-01-06</td>\n",
-       "      <td>0.0155</td>\n",
-       "      <td>0.0155</td>\n",
-       "      <td>0.0154</td>\n",
-       "      <td>0.0156</td>\n",
-       "      <td>0.0156</td>\n",
-       "      <td>0.0154</td>\n",
-       "      <td>0.0154</td>\n",
-       "      <td>0.0156</td>\n",
-       "      <td>0.0161</td>\n",
-       "      <td>0.0172</td>\n",
-       "      <td>0.0181</td>\n",
-       "      <td>0.0228</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-01-07</td>\n",
-       "      <td>0.0155</td>\n",
-       "      <td>0.0156</td>\n",
-       "      <td>0.0152</td>\n",
-       "      <td>0.0154</td>\n",
-       "      <td>0.0156</td>\n",
-       "      <td>0.0153</td>\n",
-       "      <td>0.0154</td>\n",
-       "      <td>0.0155</td>\n",
-       "      <td>0.0162</td>\n",
-       "      <td>0.0174</td>\n",
-       "      <td>0.0183</td>\n",
-       "      <td>0.0231</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-01-08</td>\n",
-       "      <td>0.0155</td>\n",
-       "      <td>0.0155</td>\n",
-       "      <td>0.0150</td>\n",
-       "      <td>0.0154</td>\n",
-       "      <td>0.0156</td>\n",
-       "      <td>0.0155</td>\n",
-       "      <td>0.0158</td>\n",
-       "      <td>0.0161</td>\n",
-       "      <td>0.0167</td>\n",
-       "      <td>0.0178</td>\n",
-       "      <td>0.0187</td>\n",
-       "      <td>0.0235</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1489</th>\n",
-       "      <td>2025-12-16</td>\n",
-       "      <td>0.0364</td>\n",
-       "      <td>0.0369</td>\n",
-       "      <td>0.0376</td>\n",
-       "      <td>0.0364</td>\n",
-       "      <td>0.0360</td>\n",
-       "      <td>0.0351</td>\n",
-       "      <td>0.0348</td>\n",
-       "      <td>0.0352</td>\n",
-       "      <td>0.0369</td>\n",
-       "      <td>0.0390</td>\n",
-       "      <td>0.0415</td>\n",
-       "      <td>0.0482</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1490</th>\n",
-       "      <td>2025-12-17</td>\n",
-       "      <td>0.0364</td>\n",
-       "      <td>0.0369</td>\n",
-       "      <td>0.0373</td>\n",
-       "      <td>0.0364</td>\n",
-       "      <td>0.0359</td>\n",
-       "      <td>0.0351</td>\n",
-       "      <td>0.0349</td>\n",
-       "      <td>0.0353</td>\n",
-       "      <td>0.0370</td>\n",
-       "      <td>0.0391</td>\n",
-       "      <td>0.0416</td>\n",
-       "      <td>0.0483</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1491</th>\n",
-       "      <td>2025-12-18</td>\n",
-       "      <td>0.0364</td>\n",
-       "      <td>0.0366</td>\n",
-       "      <td>0.0371</td>\n",
-       "      <td>0.0362</td>\n",
-       "      <td>0.0358</td>\n",
-       "      <td>0.0349</td>\n",
-       "      <td>0.0346</td>\n",
-       "      <td>0.0350</td>\n",
-       "      <td>0.0366</td>\n",
-       "      <td>0.0387</td>\n",
-       "      <td>0.0412</td>\n",
-       "      <td>0.0480</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1492</th>\n",
-       "      <td>2025-12-19</td>\n",
-       "      <td>0.0364</td>\n",
-       "      <td>0.0366</td>\n",
-       "      <td>0.0371</td>\n",
-       "      <td>0.0362</td>\n",
-       "      <td>0.0360</td>\n",
-       "      <td>0.0351</td>\n",
-       "      <td>0.0348</td>\n",
-       "      <td>0.0353</td>\n",
-       "      <td>0.0370</td>\n",
-       "      <td>0.0391</td>\n",
-       "      <td>0.0416</td>\n",
-       "      <td>0.0482</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1493</th>\n",
-       "      <td>2025-12-22</td>\n",
-       "      <td>0.0364</td>\n",
-       "      <td>0.0368</td>\n",
-       "      <td>0.0372</td>\n",
-       "      <td>0.0364</td>\n",
-       "      <td>0.0360</td>\n",
-       "      <td>0.0353</td>\n",
-       "      <td>0.0344</td>\n",
-       "      <td>0.0356</td>\n",
-       "      <td>0.0371</td>\n",
-       "      <td>0.0393</td>\n",
-       "      <td>0.0417</td>\n",
-       "      <td>0.0484</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1494 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Date  FedFunds    SOFR     1Mo     3Mo     6Mo     1Yr     2Yr  \\\n",
-       "0     2020-01-02    0.0155  0.0154  0.0153  0.0154  0.0157  0.0156  0.0158   \n",
-       "1     2020-01-03    0.0155  0.0155  0.0152  0.0152  0.0155  0.0155  0.0153   \n",
-       "2     2020-01-06    0.0155  0.0155  0.0154  0.0156  0.0156  0.0154  0.0154   \n",
-       "3     2020-01-07    0.0155  0.0156  0.0152  0.0154  0.0156  0.0153  0.0154   \n",
-       "4     2020-01-08    0.0155  0.0155  0.0150  0.0154  0.0156  0.0155  0.0158   \n",
-       "...          ...       ...     ...     ...     ...     ...     ...     ...   \n",
-       "1489  2025-12-16    0.0364  0.0369  0.0376  0.0364  0.0360  0.0351  0.0348   \n",
-       "1490  2025-12-17    0.0364  0.0369  0.0373  0.0364  0.0359  0.0351  0.0349   \n",
-       "1491  2025-12-18    0.0364  0.0366  0.0371  0.0362  0.0358  0.0349  0.0346   \n",
-       "1492  2025-12-19    0.0364  0.0366  0.0371  0.0362  0.0360  0.0351  0.0348   \n",
-       "1493  2025-12-22    0.0364  0.0368  0.0372  0.0364  0.0360  0.0353  0.0344   \n",
-       "\n",
-       "         3Yr     5Yr     7Yr    10Yr    30Yr  \n",
-       "0     0.0159  0.0167  0.0179  0.0188  0.0233  \n",
-       "1     0.0154  0.0159  0.0171  0.0180  0.0226  \n",
-       "2     0.0156  0.0161  0.0172  0.0181  0.0228  \n",
-       "3     0.0155  0.0162  0.0174  0.0183  0.0231  \n",
-       "4     0.0161  0.0167  0.0178  0.0187  0.0235  \n",
-       "...      ...     ...     ...     ...     ...  \n",
-       "1489  0.0352  0.0369  0.0390  0.0415  0.0482  \n",
-       "1490  0.0353  0.0370  0.0391  0.0416  0.0483  \n",
-       "1491  0.0350  0.0366  0.0387  0.0412  0.0480  \n",
-       "1492  0.0353  0.0370  0.0391  0.0416  0.0482  \n",
-       "1493  0.0356  0.0371  0.0393  0.0417  0.0484  \n",
-       "\n",
-       "[1494 rows x 13 columns]"
+       "Empty DataFrame\n",
+       "Columns: [Date, FedFunds, SOFR, 1Mo, 3Mo, 6Mo, 1Yr, 2Yr, 3Yr, 5Yr, 7Yr, 10Yr, 30Yr]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "start_date = \"2020-01-02\"\n",
-    "end_date = dt.datetime.today().strftime('%Y-%m-%d') \n",
-    "FetchRates(start_date, end_date)"
+    "#Check for nulls\n",
+    "null_rows = rates_data[rates_data.isnull().any(axis=1)]\n",
+    "null_rows"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b55114e1",
+   "id": "1d3ea796",
    "metadata": {},
    "outputs": [],
    "source": []
