--- a/Principal Component Analysis.ipynb
+++ b/Principal Component Analysis.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "dfb8efab",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "<Axes: title={'center': '126-Day Rolling PCA: Explained Variance Over Time'}>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "def calculate_rolling_pca(df, window=126): \n",
+    "def calculate_rolling_pca(df, window): \n",
     "    tenors = ['1Mo', '3Mo', '6Mo', '1Yr', '2Yr', '3Yr', '5Yr', '7Yr', '10Yr', '30Yr']\n",
     "    # We keep the index aligned with the original 'df' so we can look up the Date later\n",
     "    diff_df = df[tenors].diff() \n",
@@ -134,11 +134,11 @@
     "    )\n",
     "    return rolling_var_df\n",
     "\n",
-    "# Usage\n",
-    "rolling_pca_results = calculate_rolling_pca(rates_data)\n",
+    "rolling_window = 126\n",
+    "rolling_pca_results = calculate_rolling_pca(rates_data, rolling_window)\n",
     "\n",
     "# Because 'index=dates', the x-axis will now automatically be the Date\n",
-    "rolling_pca_results.plot(figsize=(12,6), title=\"126-Day Rolling PCA: Explained Variance Over Time\")"
+    "rolling_pca_results.plot(figsize=(12,6), title=f'{rolling_window}-Day Rolling PCA: Explained Variance Over Time')"
    ]
   },
   {
